# axum_graphql_bootstrap

./: .rusty-hook.toml  Cargo.toml  LICENSE  README.md
.github/workflows/: actions.yml
backend/: Cargo.toml
backend/src/: graphql.rs  lib.rs  main.rs  router.rs
config/: default.toml  testing.toml
database/: datacenter.db  tables.sql  testing.db
libs/domains/: Cargo.toml
libs/domains/src/: lib.rs
libs/domains/src/posts/: mod.rs  model.rs  resolver.rs  service.rs
libs/utils/: Cargo.toml
libs/utils/src/: config.rs  lib.rs
