[workspace]
members = ["backend", "libs/*"]

[workspace.dependencies]
anyhow = "1.0.72"
axum = "0.6.20"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "env-filter"] }
serde_json = "1.0.104"
figment = { version = "0.10.10", features = ["env", "toml"] }
once_cell = "1.18.0"
serde = { version = "1.0.183", features = ["derive"] }
tower-http = { version = "0.4.3", features = ["trace"] }
hyper = "0.14.27"
async-graphql = { version = "6.0.1", features = ["chrono"] }
async-graphql-axum = "6.0.1"
sqlx = { version = "0.7.1", features = [
    "chrono",
    "json",
    "macros",
    "sqlite",
    "runtime-tokio-rustls",
    "uuid",
] }
async-trait = "0.1.73"
chrono = { version = "0.4.26", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4"] }

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true        # Link time optimization.
codegen-units = 1 # Allow for maximum size reduction optimizations.
