[package]
name = "axum_graphql_backend"
version = "0.1.0"
edition = "2021"
authors = ["Hao <objdev@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
sqlx = { workspace = true }

axum_graphql_utils = { path = "../libs/utils" }
axum_graphql_domains = { path = "../libs/domains" }

[dev-dependencies]
rusty-hook = "0.11.2"
