[package]
name = "axum_graphql_domains"
version = "0.1.0"
edition = "2021"
authors = ["Hao <objdev@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "6.0.1", features = ["chrono"] }
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.183", features = ["derive"] }
tracing = "0.1.37"
